Bug 977301 - Disable input type color (on beta channel). r=dholbert a=sledru