widget/cocoa/nsLookAndFeel.mm
@@ -447,7 +447,7 @@ nsLookAndFeel::GetIntImpl(IntID aID, int32_t &aResult)
       }
       break;
     case eIntID_ColorPickerAvailable:
-      aResult = 1;
+      aResult = 0;
       break;
     default:
       aResult = 0;
