modules/libpref/src/init/all.js
@@ -872,9 +872,8 @@ pref("dom.experimental_forms", false);
 // Disable <input type=number>:
 pref("dom.forms.number", false);
 
-// Enable <input type=color> by default. It will be turned off for remaining
-// platforms which don't have a color picker implemented yet.
-pref("dom.forms.color", true);
+// Don't enable <input type=color> yet:
+pref("dom.forms.color", false);
 
 // Enables system messages and activities
 pref("dom.sysmsg.enabled", false);
